tests/ui/type-alias-impl-trait/lazy_subtyping_of_opaques.stderr
error[E0308]: mismatched types
  --> $DIR/lazy_subtyping_of_opaques.rs:12:5
   |
LL | fn reify_as_tait() -> Thunk<Tait> {
   |                       ----------- expected `Thunk<_>` because of return type
LL |
LL |     Thunk::new(|cont| cont)
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `Thunk<_>`, found `()`
   |
   = note: expected struct `Thunk<_>`
           found unit type `()`

error[E0277]: expected a `FnOnce()` closure, found `()`
  --> $DIR/lazy_subtyping_of_opaques.rs:12:23
   |
LL |     Thunk::new(|cont| cont)
   |                       ^^^^ expected an `FnOnce()` closure, found `()`
   |
   = help: the trait `FnOnce()` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`

error[E0277]: expected a `FnOnce()` closure, found `()`
  --> $DIR/lazy_subtyping_of_opaques.rs:10:23
   |
LL | fn reify_as_tait() -> Thunk<Tait> {
   |                       ^^^^^^^^^^^ expected an `FnOnce()` closure, found `()`
LL |
LL |     Thunk::new(|cont| cont)
   |     ----------------------- return type was inferred to be `{type error}` here
   |
   = help: the trait `FnOnce()` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
